--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -1,13 +1,34 @@
 @charset "utf-8";
 
 body,html{margin:0; width:100%;}
-html{background-color:#dddddd;}
+html{background-color:#ffffff;}
 
 .container{
-	padding-left:10px;
-	padding-top:10px;
+	padding:10px;
 	font-family:"Helvetica";
 }
+
+.container img{
+	
+	position:fixed;
+	right:10px;
+	top:10px;
+	
+}
+
+::selection {
+	
+	background-color:#b9b9b9;
+	color:#000000;
+	
+}
+
+h1, h2 {
+	
+	text-shadow: 1px 1px 2px #000000; 
+	
+}
+
 
 h1 {
 	color:#444;
@@ -59,6 +80,6 @@ td:last-of-type{
 }
 .paragrafer{
 	padding-top:10px;
-	width:700px;
+	width:50%;
 	color:#222;
 }
