--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -1,6 +1,5 @@
 @charset "utf-8";
 
-body,html{margin:0; width:100%;}
 html{background-color:#ffffff;}
 
 .menu {background-color:black;width:100%} 
@@ -9,22 +8,17 @@ html{background-color:#ffffff;}
 
 .container{
 	
-	padding:10px;
 	font-family:"Helvetica";
 	position:relative;
+	z-index:-1;
+	padding-top:10px;
 	top:10px;
+	
 }
 
 .container img{
 	
 	float:right;
-	
-}
-
-::selection {
-	
-	background-color:#b9b9b9;
-	color:#000000;
 	
 }
 
@@ -45,6 +39,7 @@ h2 {
 }
 
 .likerTabell{
+	
 	text-align:center;
 	border-collapse: collapse;
 	width:450px;
@@ -84,7 +79,7 @@ td:last-of-type{
 	border-right: solid 0px;
 }
 .paragrafer{
-	padding-top:10px;
+	padding-top:20px;
 	width:50%;
 	color:#222;
 }
