--- a/Nettside/WebContent/JavaEksempler/JavaCodeStyle.css
+++ b/Nettside/WebContent/JavaEksempler/JavaCodeStyle.css
@@ -20,3 +20,21 @@
 	padding-left:2px;
 	
 }
+
+h4, p {
+	
+	display:table;
+	
+}
+
+h1, h4 {
+	
+	color:#444;
+	
+}
+
+h1 {
+	
+	text-shadow: 1px 1px 2px #000000; 
+	
+}
