--- a/Nettside/WebContent/JavaEksempler/JavaCodeStyle.css
+++ b/Nettside/WebContent/JavaEksempler/JavaCodeStyle.css
@@ -1,8 +1,28 @@
 @charset "utf-8";
 
 .menu {background-color:black;width:100%} 
-.menu_element {height:40px;width:20%;padding: 10px 0px;background-color:black;text-align:center; float:left;}
+.menu_element {height:40px;width:20%;padding:10px 0px;background-color:black;text-align:center; float:left;}
 .menu_element a{color:white;text-decoration:none;}
+
+.bottom_menu {
+	background-color:black;
+	width:100%;
+	
+} 
+
+.bottom_menu_element {
+	width:33.333333%;
+	padding:10px 0px 20px;
+	background-color:black;
+	text-align:center;
+	float:left;
+	margin-bottom:10px;
+}
+
+.bottom_menu_element a{
+	color:white;
+	text-decoration:none;
+}
 
 .container{
 	
@@ -10,6 +30,7 @@
 	position:relative;
 	z-index:-1;
 	padding-top:10px;
+	padding-bottom:10px;
 	top:10px;
 	
 }
