--- a/Nettside/WebContent/om_oss.css
+++ b/Nettside/WebContent/om_oss.css
@@ -9,13 +9,6 @@
     position: relative;
 }
 
-.bildetekst {
-    position: absolute;
-    bottom: -26px;
-    left: 16px;
-    font-size: 18px;
-}
-
 .container img {
 	
 	padding-top:10px;
@@ -25,6 +18,13 @@
 	width:100%;
 	height:50vh;
 	
+}
+
+.bildetekst {
+    position: absolute;
+    top: 26px;
+    left: 16px;
+    font-size: 18px;
 }
 
 .container .text_field {
