--- a/Nettside/WebContent/om_oss.css
+++ b/Nettside/WebContent/om_oss.css
@@ -12,6 +12,7 @@
 .container img {
 	
 	padding-top:10px;
+	padding-right:10px;
 	margin-left:auto;
 	margin-right:auto;
 	display:block;
@@ -30,7 +31,6 @@
 }
 
 .container .text_field {
-	padding-left:10px;
 	font-family:"Helvetica";
 	
 }
