--- a/Nettside/WebContent/om_oss.css
+++ b/Nettside/WebContent/om_oss.css
@@ -11,7 +11,7 @@
     position: relative;
 }
 
-.container img {
+.container_gruppebilde img {
 	
 	padding-top:10px;
 	padding-right:10px;
@@ -32,7 +32,7 @@
     color: white;
 }
 
-.container .text_field {
+.container_gruppebilde .text_field {
 	font-family:"Helvetica";
 	
 }
