--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 
-html{background-color:#ffffff;}
+html{
+  background-image: linear-gradient(0deg, #afeeee 0%, #094479 93%, #444444 100%);
+}
 
 .menu {background-color:black;width:100%} 
 .menu_element {height:40px;width:20%;padding: 10px 0px;background-color:black;text-align:center; float:left;}
