--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 html{
-  background-image: linear-gradient(0deg, #afeeee 0%, #094479 97%, #444444 100%);
+  background-image: linear-gradient(0deg, #afeeee 0%, #094479 97%, #444444 100%);height:100%;
 }
 
 .menu {background-color:black;width:100%} 
