--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -4,9 +4,29 @@ html{
   background-image: linear-gradient(0deg, #afeeee 0%, #094479 97%, #444444 100%); min-height:100%;
 }
 
+@keyframes menu_hover_ani {
+	
+	from{background-color:#000000;}
+	to{background-color:#222222;}
+	
+}
+
 .menu {background-color:black;width:100%} 
-.menu_element {height:40px;width:16%;padding: 10px 0px;background-color:black;text-align:center; float:left;}
+.menu_element {height:40px;width:16%;padding: 10px 0px;background-color:#000000;text-align:center; float:left;}
 .menu_element a{color:white;text-decoration:none;}
+
+.menu_element:hover {
+	
+	backround-color:relative;
+	animation-name:menu_hover_ani;
+	animation-duration:1s;
+	animation-iteration-count:infinite;
+	animation-direction:alternate;
+	animation-timing-function:ease-out;
+	animation-fill-mode:both;
+	animation-delay:1s;
+	
+}
 
 .container{
 	
