--- a/Nettside/WebContent/JavaEksempler/JavaCodeStyle.css
+++ b/Nettside/WebContent/JavaEksempler/JavaCodeStyle.css
@@ -1,7 +1,14 @@
 @charset "utf-8";
 
+@keyframes menu_hover_ani {
+	
+	from{background-color:#000000;}
+	to{background-color:#222222;}
+	
+}
+
 .menu {background-color:black;width:100%} 
-.menu_element {height:40px;width:20%;padding:10px 0px;background-color:black;text-align:center; float:left;}
+.menu_element {height:40px;width:50%;padding:10px 0px;background-color:black;text-align:center; float:left;}
 .menu_element a{color:white;text-decoration:none;}
 
 .bottom_menu {
@@ -9,6 +16,19 @@
 	width:100%;
 	
 } 
+
+.menu_element:hover {
+	
+	backround-color:relative;
+	animation-name:menu_hover_ani;
+	animation-duration:1s;
+	animation-iteration-count:infinite;
+	animation-direction:alternate;
+	animation-timing-function:ease-out;
+	animation-fill-mode:both;
+	animation-delay:1s;
+	
+}
 
 .bottom_menu_element {
 	width:33.333333%;
