--- a/Nettside/WebContent/JavaEksempler/JavaCodeStyle.css
+++ b/Nettside/WebContent/JavaEksempler/JavaCodeStyle.css
@@ -29,6 +29,18 @@
 	animation-delay:1s;
 	
 }
+.bottom_menu_element:hover {
+	
+	backround-color:relative;
+	animation-name:menu_hover_ani;
+	animation-duration:1s;
+	animation-iteration-count:infinite;
+	animation-direction:alternate;
+	animation-timing-function:ease-out;
+	animation-fill-mode:both;
+	animation-delay:1s;
+	
+}
 
 .bottom_menu_element {
 	width:33.333333%;
