--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -11,9 +11,9 @@ html{
 	
 }
 
-.menu {background-color:black;width:100%} 
+.menu {background-color:black;width:100%;height:40px;} 
 .menu_element {height:40px;width:16%;padding: 10px 0px;background-color:#000000;text-align:center; float:left;}
-.menu_element a{color:white;text-decoration:none;}
+.menu_element a{color:white;text-decoration:none;width:100%;height:100%;display:block;}
 
 .menu_element:hover {
 	
