--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -32,7 +32,6 @@ html{
 	
 	font-family:"Helvetica";
 	position:relative;
-	z-index:-1;
 	padding-top:10px;
 	top:10px;
 	
@@ -74,6 +73,42 @@ html{
 	
 }
 
+.download{
+	
+	position:relative;
+	bottom:10px;
+	width:100px;
+	height:30px;
+	background-color:#000000;
+	
+}
+
+.download:hover {
+	
+	backround-color:relative;
+	animation-name:menu_hover_ani;
+	animation-duration:1s;
+	animation-iteration-count:infinite;
+	animation-direction:alternate;
+	animation-timing-function:ease-out;
+	animation-fill-mode:both;
+	animation-delay:1s;
+	
+}
+
+.download a{
+	
+	z-index:2;
+	text-align:center;
+	text-decoration:none;
+	line-height:30px;
+	color:#FFFFFF;
+	width:100%;
+	height:100%;
+	display:block;
+	
+}
+
 h1, h2, h3 {
 	
 	text-shadow: 1px 1px 2px #000000; 
@@ -100,6 +135,15 @@ h3 {
 	border-collapse: collapse;
 	width:450px;
 	color:#222;
+}
+
+.experienceTable{
+	
+	text-align:center;
+	border-collapse: collapse;
+	width:450px;
+	color:#222;
+	cellspacing:0px;
 }
 
 tr{
