--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -77,8 +77,10 @@ html{
 	
 	position:relative;
 	bottom:10px;
-	width:100px;
-	height:30px;
+	width:15vw;
+	min-width:225px;
+	height:7vh;
+	min-height:40px;
 	background-color:#000000;
 	
 }
@@ -101,7 +103,7 @@ html{
 	z-index:2;
 	text-align:center;
 	text-decoration:none;
-	line-height:30px;
+	line-height:7vh;
 	color:#FFFFFF;
 	width:100%;
 	height:100%;
