--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -93,6 +93,7 @@ html{
 	
 }
 
+
 .download:hover {
 	
 	background-color:relative;
@@ -116,6 +117,12 @@ html{
 	width:100%;
 	height:100%;
 	display:block;
+	
+}
+
+#sluttrapport_btn {
+	
+	bottom:85px;
 	
 }
 
