--- a/Nettside/WebContent/JEStyleSheet.css
+++ b/Nettside/WebContent/JEStyleSheet.css
@@ -11,6 +11,24 @@ html{
 	
 }
 
+body {
+	
+	-webkit-user-select:none;
+	-moz-user-select:none;
+	-ms-user-select:none;
+	user-select:none;
+	
+}
+
+p, h1, h2, h3, h4, h5, h6, a, strong, pre, title{
+	
+	-webkit-user-select:text;
+	-moz-user-select:text;
+	-ms-user-select:text;
+	user-select:text;
+	
+}
+
 .menu {background-color:black;width:100%;height:40px;} 
 .menu_element {height:40px;width:calc(100%/6);padding: 10px 0px;background-color:#000000;text-align:center; float:left;}
 .menu_element a{color:white;text-decoration:none;width:100%;height:100%;display:block;}
@@ -75,7 +93,8 @@ html{
 
 #prosjektbeskrivelse{
 	
-	width:73%;
+	width:73vw;
+	display:inline-block;
 	
 }
 
@@ -90,6 +109,7 @@ html{
 	height:7vh;
 	min-height:40px;
 	background-color:#000000;
+	user-select:none;
 	
 }
 
@@ -106,6 +126,7 @@ html{
 	animation-delay:1s;
 	
 }
+
 
 .download a{
 	
